views/codex/codex-rs/tui/src/snapshots/codex_tui__keymap_setup__tests__keymap_picker_wide.snap
---
source: tui/src/keymap_setup.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  139 actions, 0 customized, 5 unbound.

  [All]  Common  Customized (0)  Unbound (5)  App  Composer  Editor  Vim  Navigation  Agents  Approval  Debug

  Type to search shortcuts
› Global       - Open Agents                unbound
  Global         Open Transcript            ctrl-t
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global         Toggle Raw Output          alt-r
  Global         Toggle Side Conversation   ctrl-/

  left/right group · enter edit shortcut · * custom · - unbound · esc close
